--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -23,7 +23,7 @@ marketing:
     fathom: ''
     pirsch: ''
   verification:
-    google: ''
+    google: '9PM_jhghQ7uHmlZy-cLfP1bI_U2rSraavxN9PlhW20c'
     baidu: ''
 
 # Site header
