--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -24,7 +24,7 @@ marketing:
     pirsch: ''
   verification:
     google: '9PM_jhghQ7uHmlZy-cLfP1bI_U2rSraavxN9PlhW20c'
-    bing: 'DC8618ABC3A6E7C865248761F311C3EF'
+    bing: ''
 
 # Site header
 header:
