--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -9,7 +9,7 @@ main:
     weight: 10
   - name: Papers
     # url: publication/
-    url: /#paper
+    url: /#papers
     weight: 11
   # - name: Talks
   #   url: /#talks
